# aidana-ai

./: .swiftformat  LICENSE  Makefile  README.md  mcp-health.json  pyproject.toml  test.py  tts_test.py
.github/workflows/: ci.yml
Aidana/: Aidana.entitlements
Aidana.xcodeproj/: project.pbxproj
Aidana/Application/: AidanaApp.swift  AppDelegate.swift
Aidana/Preferences/: PreferencesStore.swift
Aidana/Server/: AIServer.swift  ASRWebSocketHandler.swift  ChatServer.swift  LLMServer.swift  MCPServer.swift  ModelManager.swift  ServerState.swift  TTSServer.swift
Aidana/Support/: ASRTestClient.swift  LogStore.swift  MCPToolsViewModel.swift
Aidana/UI/: LogView.swift
Casks/: aidana.rb
Tests/: TextNormalizerTests.swift
browser-extension/: README.md  config.ts  example-mcp-client.ts  example-mcp-doctor-search.ts  example-mcp-file-search.ts  example-mcp-inspect.ts  manifest.json  mcp-server.ts  mcp.json  package.json  vite.config.js
browser-extension/examples/: browser-automation.ts  chatgpt.ts  consensus.ts  doctor-search.ts  download-file.ts  file-search.ts  google-maps.ts  google-search.ts  inspect.ts  mcp-client.ts  scrape.ts
browser-extension/scripts/: build-embedded-mcp.mjs
browser-extension/src/: env.d.ts  mcp-tools.ts  types.ts  (+3 more)
chat/: astro.config.ts
mcp_tests/: test-llm-dual-mode.ts  test-scrape-dedup.ts  test-web-search.ts
plans/: chat-integration-plan.md  clickable-mcp-tools.md  llm-dual-mode-plan.md  llm-integration.md  mcp-gateway-plan.md  scrape-dedup-implementation.md  scrape-format.md  scrape-tool.md
voices/: female6.txt  female7.txt
(+54 files in other folders)
